# copycat-bot

./: README.md  prepare_data.py  pyproject.toml
copycat_bot/data_preparation/: telegram.py
tests/: test_copycat_bot.py
