[tool.poetry]
name = "copycat-bot"
version = "0.1.0"
description = ""
authors = ["Sergey <sergey4troinin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
tensorflow = "^2.5.0"
numpy = "1.19.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
